# CG_Path_Tracer

./: CMakeLists.txt  README.md
src/: Camera.cpp  Camera.h  CameraLoader.cpp  CameraLoader.h  Geometry.cpp  Geometry.h  Light.cpp  Light.h  Material.cpp  Material.h  MeshGeometry.cpp  MeshGeometry.h  Object3D.cpp  Object3D.h  ObjectIntersection.cpp  ObjectIntersection.h  ObjectLoader.cpp  ObjectLoader.h  Ray.cpp  Ray.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  SceneLoader.cpp  SceneLoader.h  SphereGeometry.cpp  SphereGeometry.h  main.cpp
src/camera/: Camera.cpp  Camera.h  OrthographicCamera.cpp  OrthographicCamera.h  PerspectiveCamera.cpp  PerspectiveCamera.h
src/core/: Camera.cpp  Camera.h  Geometry.cpp  Geometry.h  Loader.cpp  Loader.h  Material.cpp  Material.h  Object3D.cpp  Object3D.h  ObjectIntersection.cpp  ObjectIntersection.h  Ray.cpp  Ray.h  RayCaster.cpp  RayCaster.h  Renderer.cpp  Renderer.h  Scene.cpp  Scene.h  Texture.cpp  Texture.h  main.cpp
src/geometry/: BoxGeometry.cpp  BoxGeometry.h  Geometry.h  MeshGeometry.cpp  MeshGeometry.h  SphereGeometry.cpp  SphereGeometry.h  Triangle.cpp  Triangle.h  VertexData.cpp  VertexData.h
src/light/: AmbientLight.cpp  AmbientLight.h  DirectionalLight.cpp  DirectionalLight.h  Light.cpp  Light.h  PointLight.cpp  PointLight.h  SpotLight.cpp  SpotLight.h
src/loader/: MaterialLoader.cpp  MaterialLoader.h  ObjectLoader.cpp  ObjectLoader.h  SceneLoader.cpp  SceneLoader.h  TextureLoader.cpp  TextureLoader.h
src/loaders/: CameraLoader.cpp  CameraLoader.h  MaterialLoader.cpp  MaterialLoader.h  MeshLoader.cpp  MeshLoader.h  SceneLoader.cpp  SceneLoader.h
src/material/: PhongMaterial.cpp  PhongMaterial.h
src/math/: Box3.cpp  Box3.h  Matrix2.cpp  Matrix2.h  Matrix3.cpp  Matrix3.h  Matrix4.cpp  Matrix4.h  Quaternion.cpp  Quaternion.h  Ray.cpp  Ray.h  Triangle.cpp  Triangle.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h  Vector4.cpp  Vector4.h
src/renderer/: CPURenderer.cpp  CPURenderer.h  GPURenderer.cpp  GPURenderer.h  Renderer.cpp  Renderer.h
src/renderizable/: Mesh.cpp  Mesh.h  Renderizable.cpp  Renderizable.h  Sphere.cpp  Sphere.h
src/scene/: Scene.cpp  Scene.h
